# project2-cop3530-spellcheck

./: .gitignore  CMakeLists.txt  README.md  main.cpp
levenshtein/: CMakeLists.txt  levenshtein.cpp  levenshtein.hpp
levenshtein/test/: CMakeLists.txt  levenshtein_test.cpp
trie/: CMakeLists.txt  trie.cpp  trie.hpp
trie/test/: CMakeLists.txt  trie_test.cpp
tst/: CMakeLists.txt  README.md  tst.cpp  tst.hpp
tst/test/: CMakeLists.txt  tst_test.cpp
ui/: CMakeLists.txt  ui.cpp  ui.hpp
words/: CMakeLists.txt  data_path.hpp.in  dictionary.cpp  dictionary.hpp
words/test/: CMakeLists.txt  dictionary_test.cpp
words/test/fixtures/: sample_words.txt
